# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jk-munkres"
version = "1.0.0"
description = "A fork of munkres"
readme = "README.md"
authors = [{ name = "Jonathan Kerr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["munkres", "assignment problem"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
